--- a/html/git.html
+++ b/html/git.html
@@ -14,19 +14,26 @@
       <div class="card">
          <p class="subtitle">Git</p>
           <ul>
-            <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
-            <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
-            <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
-            <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mv - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
-         </ul>
+            <li>git init - инициализация нового репозитория Git в текущей папке</li>
+            <li>git clone [url] - клонирование удаленного репозитория по указанному URL</li>
+            <li>git add [файл] - добавление файла в индекc для последующего коммита</li>
+            <li>git commit -m "сообщение" - создание коммита с указанным сообщением</li>
+            <li>git status - просмотр статуса изменений в рабочей директории и индексе</li>
+            <li>git push - отправка коммитов в удаленный репозиторий</li>
+            <li>git pull - получение изменений из удаленного репозитория и слияние с текущей веткой</li>
+            <li>git branch - просмотр, создание и удаление веток</li>
+            <li>git checkout [ветка] - переключение на указанную ветку или коммит</li>
+            <li>git merge [ветка] - слияние указанной ветки с текущей</li>
+            <li>git log - просмотр истории коммитов</li>
+            <li>git diff - просмотр изменений между коммитами, ветками и т.д.</li>
+          </ul>
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
          <p class="location" align="center">
-            <a href="mac.html">Вернуся на главную</a>
+            <a href="index.html">Вернуться на главную</a>
          </p>
-         &copy; 202 4. SkyPro
+         &copy; 2024. SkyPro
       </footer>
    </body>
 </html>
