--- a/html/git.html
+++ b/html/git.html
@@ -12,7 +12,7 @@
    <body>
       <!--Card-->
       <div class="card">
-         <p class="subtitle">Git</p>
+         <p class="subtitle">Команды Git</p>
           <ul>
             <li>git init - инициализация нового репозитория Git в текущей папке</li>
             <li>git clone [url] - клонирование удаленного репозитория по указанному URL</li>
