--- a/html/git.html
+++ b/html/git.html
@@ -11,7 +11,7 @@
    </head>
    <body>
       <!--Card-->
-      <div class="card">
+      <div class="card animated fadeIn>
          <p class="subtitle">Команды Git</p>
           <ul>
             <li>git init - инициализация нового репозитория Git в текущей папке</li>
