--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="html/mac.html">Терминал MacOS</a>
          </p>
           <p class="location" align="center">
-            <a href="html/git.html">Git</a>
+            <a href="html/git.html">Команды Git</a>
          </p>
       </div>
       <!--footer-->
